# HEU-ROV

./: .gitignore  README.md
crack/: BagFileObjectDetection.py  Combine-DistanceAndDepth.py  Mouse-DistanceAndDepth.py  README.md  RSd405-DistanceAndDepth.py  YOLO-WidthAndDepth-auto.py  YOLOv8-d455.py  requirements.txt  test_env.py  yolov8-realsense.py
crack/cpp-version/: CMakeLists.txt  Combine-DistanceAndDepth.cpp  Combine-DistanceAndDepthDiff.cpp  Mouse-DistanceAndDepth.cpp
crack/python-version/: Combine-DistanceAndDepth.py  YOLO-WidthAndDepth-auto.py
tools/: README.md  imageHalf.cpp
tools/dataProcessing/: get_pictures.py
tools/dataProcessing/data_augmentation/: data_augmentation.py  environment.yaml
tools/imageDefogging/scripts/: autoWhiteBalance.py
tools/imageDefogging/src/: CMakeLists.txt  autoWhiteBalance.cpp  darkChannelPrior.cpp  equalizeAndEnhance.cpp
vision_crack_detection/: README.md
vision_crack_detection/cpp/: Combine-DistanceAndDepth.cpp
vision_crack_detection/models/: README.md
vision_crack_detection/python/: YOLO-DistanceAndDepth-semi-auto.py
vision_crack_detection/python-version/: requirements.txt
vision_crack_detection/tests/: test_realsense.py
vision_marine_grasping/: README.md  YOLO-Marine-Position.py  requirements.txt
vision_marine_grasping/models/: README.md
vision_marine_grasping/my_packages/: get_YOLO_result.py
vision_marine_grasping/src/: YOLO-Marine-Position.py  requirements.txt  serial.py
vision_structure_measurement/: 3D-Structure-Measure.py  README.md  requirements.txt  structure-measure.py
vision_structure_measurement/src/cpp/: 3D-Structure-Measure.cpp  CMakeLists.txt
vision_video_streaming/: README.md  camera.service
vision_video_streaming/scripts/: camera_stream.py  open_camera.py
(+7 files in other folders)
